--- a/index.html
+++ b/index.html
@@ -1,81 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible"
-		content="IE=edge">
-	<meta name="viewport"
-		content="width=device-width, initial-scale=1.0">
-	<title>GfG</title>
-</head>
-
-<body>
-	<form>
-		<fieldset>
-			<legend>Personal Details</legend>
-
-			<p>
-				<label>
-					Salutation
-					<br />
-					<select name="salutation">
-						<option>--None--</option>
-						<option>Mr.</option>
-						<option>Ms.</option>
-						<option>Mrs.</option>
-						<option>Dr.</option>
-						<option>Prof.</option>
-					</select>
-				</label>
-			</p>
-
-			<p>
-				<label>First name: <input name="firstName" /></label>
-			</p>
-
-			<p>
-				<label>Last name: <input name="lastName" /></label>
-			</p>
-
-			<p>
-				Gender :
-				<label><input type="radio" name="gender"
-							value="male" />
-					Male
-				</label>
-				<label><input type="radio" name="gender"
-							value="female" />
-					Female
-				</label>
-			</p>
-
-			<p>
-				<label>Email:<input type="email"
-									name="email" />
-				</label>
-			</p>
-
-			<p>
-				<label>Date of Birth:<input type="date"
-											name="birthDate">
-				</label>
-			</p>
-
-			<p>
-				<label>
-					Address :
-					<br />
-					<textarea name="address" cols="30"
-							rows="3">
-					</textarea>
-				</label>
-			</p>
-
-			<p>
-				<button type="submit">Submit</button>
-			</p>
-
-		</fieldset>
-	</form>
-</body>
-</html>
+<!DOCTYPE html>  
+ <html>  
+ <head>  
+  <title>Form in HTML</title>  
+</head>  
+ <body>  
+     <h2>Registration form</h2>  
+    <form>  
+     <fieldset>  
+        <legend>User personal information</legend>  
+        <label>Enter your full name</label><br>  
+        <input type="text" name="name"><br>  
+         <label>Enter your email</label><br>  
+         <input type="email" name="email"><br>  
+         <label>Enter your password</label><br>  
+         <input type="password" name="pass"><br>  
+         <label>confirm your password</label><br>  
+         <input type="password" name="pass"><br>  
+         <br><label>Enter your gender</label><br>  
+         <input type="radio" id="gender" name="gender" value="male"/>Male  <br>  
+         <input type="radio" id="gender" name="gender" value="female"/>Female <br/>    
+         <input type="radio" id="gender" name="gender" value="others"/>others <br/>   
+          <br>Enter your Address:<br>  
+         <textarea></textarea><br>  
+         <input type="submit" value="sign-up">  
+     </fieldset>  
+  </form>  
+ </body>  
+</html>  
